--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -20,5 +20,6 @@
 
 #modal-content {
   position: absolute;
-  background-color:white;
+  background-color: white;
+  z-index: 100001;
 }
